--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,7 @@
 
 .searchBox input:focus {
   transition-duration: 200ms;
-  border-color: #0078D4 !important;
+  border-color: #0078d4 !important;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,8 +25,10 @@
     color: #fff;
   }
 
-  input, .searchBox input,
-  .react-search-box-dropdown-list-item, .ms-TextField-wrapper label {
+  input,
+  .searchBox input,
+  .react-search-box-dropdown-list-item,
+  .ms-TextField-wrapper label {
     background: #24292e !important;
     color: white !important;
   }
